--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1147,7 +1147,7 @@ h6 {
   margin-bottom: 15px;
 }
 
-#contact .form #errormessage {
+#contact .form #errormessage{
   color: red;
   display: none;
   border: 1px solid red;
@@ -1155,6 +1155,13 @@ h6 {
   padding: 15px;
   font-weight: 600;
   margin-bottom: 15px;
+}
+
+#subscribe_err {
+  color: red;
+  display: none;
+  /* border: 1px solid red; */
+
 }
 
 .showme {
